--- a/SportsStore.WebUI/Views/Admin/Edit.cshtml
+++ b/SportsStore.WebUI/Views/Admin/Edit.cshtml
@@ -10,7 +10,7 @@
         <h3>Edit @Model.Name</h3>
     </div>
 
-    @using (Html.BeginForm())
+    @using (Html.BeginForm("Edit", "Admin"))
     {
         <div class="panel-body">
             @Html.HiddenFor(m => m.ProductID)
@@ -18,19 +18,20 @@
             {
                 if (property.PropertyName != "ProductID")
                 {
-                    <div class="form-group">
-                        <label>@(property.DisplayName ?? property.PropertyName)</label>
-                        @if (property.PropertyName == "Description")
-                        {
-                            @Html.TextArea(property.PropertyName, null,
-                                    new { @class = "form-control", rows = 5 })
-                        }
-                        else
-                        {
-                            @Html.TextBox(property.PropertyName, null,
-                                    new { @class = "form-control" })
-                        }
-                    </div>
+            <div class="form-group">
+                <label>@(property.DisplayName ?? property.PropertyName)</label>
+                @if (property.PropertyName == "Description")
+                {
+                    @Html.TextArea(property.PropertyName, null,
+                            new { @class = "form-control", rows = 5 })
+                }
+                else
+                {
+                    @Html.TextBox(property.PropertyName, null,
+                            new { @class = "form-control" })
+                }
+                @Html.ValidationMessage(property.PropertyName)
+            </div>
                 }
             }
         </div>
